# TerrainWeb

./: Dockerfile  Dockerfile.drogon  README.md  develop.txt  docker-compose.yml  openapi.json  openapi.yaml
backend/ppo_cg_course/: CMakeLists.txt  error_codes.h  main.cpp
backend/ppo_cg_course/.cmake/api/v1/reply/: cache-v2-35b6238b60056420fd29.json  cmakeFiles-v1-d0dc77ce5d5fb545e783.json  codemodel-v2-fc6b92b86ea74a0f8700.json  index-2022-11-16T14-10-23-0937.json  target-http_server-Release-b8006e433e3d170f16c6.json  target-your_project_name_test-Release-3f43f5545e5f8be17287.json
backend/ppo_cg_course/config_data/: config.json
backend/ppo_cg_course/core/: main.cpp  main_client.cpp
backend/ppo_cg_course/core/config/: base_config.hpp  config.cpp  config.h  config_struct.h
backend/ppo_cg_course/core/data_access/: data_access_base.h
backend/ppo_cg_course/core/data_access/data_access_file/: data_access_file.h  data_access_file.hpp  data_access_file_base.h
backend/ppo_cg_course/core/data_access/data_access_image/: data_access_image_base.h  data_access_image_bmp.cpp  data_access_image_bmp.h
backend/ppo_cg_course/core/data_access/data_interfaces/: interface_users_db.h
backend/ppo_cg_course/core/data_access/db_model/: base_db_model.hpp
backend/ppo_cg_course/core/data_access/db_model/postgres/: postgres.cpp  postgres.hpp
backend/ppo_cg_course/core/data_access/images/: base_image.h  base_image.hpp  bmp_structure.h  data_access_image_bmp.cpp  data_access_image_bmp.h  data_access_image_bmp.hpp
backend/ppo_cg_course/core/data_access/redis/: sessions.cpp  sessions.hpp
backend/ppo_cg_course/core/data_access/terrains/: terrains_struct.hpp
backend/ppo_cg_course/core/data_access/users/: base_user.cpp  base_user.h  users.hpp  users_struct.h
backend/ppo_cg_course/core/entry/: entry.cpp  entry.h
backend/ppo_cg_course/core/entry/app_command/: app_command.cpp  app_command.h  app_command.hpp  app_command_base.h
backend/ppo_cg_course/core/entry/app_facade/: app_facade.cpp  app_facade.h
backend/ppo_cg_course/core/entry/user_fabric/: user_creator.hpp  user_solution.hpp
backend/ppo_cg_course/core/exceptions/: base_error.h  errors.h
backend/ppo_cg_course/core/geometry/plane/: plane.cpp  plane.h
backend/ppo_cg_course/core/geometry/point/: point_2d.h  point_2d.hpp  point_3d.h  point_3d.hpp  point_base.h
backend/ppo_cg_course/core/geometry/triangle/: triangle_3d.cpp  triangle_3d.h  triangle_3d.hpp
backend/ppo_cg_course/core/geometry/vector/: vector_3d.h  vector_3d.hpp
backend/ppo_cg_course/core/gui/: main_window.cpp  main_window.h  mainwindow.ui  ui_mainwindow.h
backend/ppo_cg_course/core/heightmap/: base_noise.h
backend/ppo_cg_course/core/heightmap/perlin_noise/: perlin_noise_struct.h  perlin_original.cpp  perlin_original.h  perlin_original.hpp
backend/ppo_cg_course/core/invisible/zbuffer/: zbuffer.cpp  zbuffer.h  zbuffer.hpp  zbuffer_base.h
backend/ppo_cg_course/core/log_app/: log_app.cpp  log_app.h  log_structs.h
backend/ppo_cg_course/core/object/: object_base.h
backend/ppo_cg_course/core/object/light/: light.cpp  light.h
backend/ppo_cg_course/core/object/terrain/: base_terrain.h  terrain.cpp  terrain.h  terrain.hpp  terrain_struct.h
backend/ppo_cg_course/core/scene/: base_scene.hpp  scene.cpp  scene.h  scene_struct.h
backend/ppo_cg_course/core/scene/scene_builder/: scene_builder.cpp  scene_builder.h
backend/ppo_cg_course/core/scene/scene_commands/: scene_command_base.cpp  scene_command_base.h  scene_commands.cpp  scene_commands.h
backend/ppo_cg_course/core/scene/scene_facade/: scene_facade.cpp  scene_facade.h
backend/ppo_cg_course/core/transform/: transform.cpp  transform.h
backend/ppo_cg_course/http_server/: CMakeLists.txt.autosave  config.json  main_http_server.cpp
backend/ppo_cg_course/http_server/controllers/: form_http_response.cpp  form_http_response.hpp  http_controllers.hpp
backend/ppo_cg_course/http_server/controllers/terrains/: terrain_controller.cpp
backend/ppo_cg_course/http_server/controllers/users/: user_controller.cpp
backend/ppo_cg_course/http_server/http_server_10/: http_server_10.cpp  http_server_10.hpp
backend/ppo_cg_course/http_server/json_former/: json_former.cpp  json_former.hpp
backend/ppo_cg_course/http_server/services/: base_service.hpp  base_terrain_service.hpp  base_user_service.hpp  terrains_service.cpp  terrains_service.hpp  users_service.cpp  users_service.hpp
backend/ppo_cg_course/http_server/services/terrain/: struct_terrains_service.hpp  terrains_service.cpp  terrains_service.hpp
backend/ppo_cg_course/http_server/services/user/: struct_users_service.hpp  users_service.cpp  users_service.hpp
backend/ppo_cg_course/log_data/: log_user.txt
backend/ppo_cg_course/server/: async_con.cpp  async_con.h  main_server.cpp  server.cpp  server.h  server_codes.h  server_handlers.cpp
backend/ppo_cg_course/server/controllers/: server_handlers.cpp
backend/ppo_cg_course/server/http2_server/: http2_server.h
backend/ppo_cg_course/server/http_server/: http_server.cpp  http_server.h
backend/ppo_cg_course/server/json_former/: json_former.cpp  json_former.hpp
backend/ppo_cg_course/server/jwt/: jwt.cpp  jwt.hpp
backend/ppo_cg_course/server/logs/access/: access_log.cpp  access_log.hpp
backend/ppo_cg_course/test/: Makefile  cmake_install.cmake
backend/ppo_cg_course/tests/integration_tests/: tests_image.cpp
backend/ppo_cg_course/tests/intergration_tests/: ITests.cpp  integrTests.cpp
backend/ppo_cg_course/tests/test_data/: test_image.txt
backend/ppo_cg_course/tests/unit_tests/: mocks.hpp  tests_file.cpp  tests_image.cpp  tests_perlin_noise.cpp  tests_plane.cpp  tests_point_3d.cpp  tests_users.cpp  tests_vector_3d.cpp  tests_zbuffer.cpp
backend/ppo_cg_course/tests/unit_tests/data_builders/: point3D_builder.hpp  terrain_builder.hpp  user_builder.hpp  vector3D_builder.hpp
backend/ppo_cg_course/unit_tests/: tests_file.cpp  tests_image.cpp  tests_perlin_noise.cpp  tests_plane.cpp  tests_point_3d.cpp  tests_users.cpp  tests_vector_3d.cpp  tests_zbuffer.cpp
frontend/: package-lock.json  (+2 more)
(+83 files in other folders)
